--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -9,20 +9,29 @@ on:
 jobs:
   build:
     runs-on: ubuntu-latest
-    container: python:3.9-slim
     steps:
       - name: Checkout
         uses: actions/checkout@v3
 
+      - name: Set up Python
+        uses: actions/setup-python@v4
+        with:
+          python-version: '3.9'
+
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install -r requirements.txt
+          # Explicitly installing test tools to ensure they are available
+          pip install flake8 nose coverage pinocchio
+          if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
 
       - name: Lint with flake8
         run: |
+          # We use 'service' because that is the folder name in your screenshot
           flake8 service --count --select=E9,F63,F7,F82 --show-source --statistics
           flake8 service --count --max-complexity=10 --max-line-length=127 --statistics
 
       - name: Run unit tests with nose
-        run: nosetests -v --with-spec --spec-color --with-coverage --cover-package=app
+        run: |
+          # Changed --cover-package from 'app' to 'service' to match your directory
+          nosetests -v --with-spec --spec-color --with-coverage --cover-package=service
